fix progresstype button min-width

--- a/my_components/progresstype-button/progresstype-button.html
+++ b/my_components/progresstype-button/progresstype-button.html
@@ -12,6 +12,7 @@
       display: inherit;
       height: 100%;
       width: 100%;
+      min-width: initial;
       margin: 0px;
       @apply(--layout-horizontal);
       @apply(--layout-center);
