--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					})
 					return querys;
 				}
-				var toggleVolumeSwitch(){
+				var toggleVolumeSwitch = function(){
 					if(loaded === false){
 						$open_ru.load();
 						loaded = true;
