--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>timer</title>
+	<title>ちゃど＠chess clock</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- polymer -->
